--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
       function success() {
         form.reset();
         status.classList.add("success");
-        status.innerHTML = "Thanks You for Contacting </br> We'll get back to you soon!";
+        status.innerHTML = "Thank You for Contacting </br> We'll get back to you soon!";
       }
     
       function error() {
