--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="home-text">
                 <p>Hello</p>
                 <h2>I'm Bipin Acharya</h2>
-                <h1>Student & Web Designer</h1>
+                <h1>App Developer</h1>
                 <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
             </div>
             <div class="home-img">
