change in image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bipin Acharya</title>
-    <link rel="icon" href="img/b.png" sizes="100%" type="image/png">
+    <link rel="icon" href="img/b.jpg" sizes="100%" type="image/png">
     <!--font awesome-->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <!--main css-->
@@ -501,7 +501,7 @@
                     <div class="portfolio-item-img">
                         <img src="img/portfolio/thumb/project-6.png" alt="portfolio"
                         data-screenshots="img/portfolio/large/project-6/a.png,
-                        img/portfolio/large/project-6/b.png">
+                        img/portfolio/large/project-6/b.jpg">
                         <!--view project btn-->
                         <span class="view-project">view-project</span>
                     </div>
