--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                     <div class="timeline-item">
                         <div class="timeline-item-inner outer-shadow">
                             <i class="fas fa-graduation-cap icon" style="color: var(--skin-color);"></i>
-                            <span>2021 - present</span>
+                            <span>2021 - 2023</span>
                             <h3>bachelor</h3>
-                            <p>I am currently pursuing a bachelor's degree in Informatics College Pokhara, which is located in Matepani-12, Kaski, Nepal. I'm taking an IT course. </p>
+                            <p>I have completed my bachelor's degree from Informatics College Pokhara, which is located in Matepani-12, Kaski, Nepal. </p>
                         </div>
                     </div>
                     <!--timeline item end-->
