updated about me text

--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
                 <!--social link-->
             </div>
             <div class="about-info">
-                <p><span>Hi! My name is Bipin Acharya. </span>I'm a student living with my family in Pokhara. I've always wanted to be a web developer, despite the fact that many individuals aim to be physicians or lawyers. So, I'm studying BSC Hons. This course lasts three years. I am a student with a passion for modern information technology. At Informatics College Pokhara, I'm currently pursuing a bachelor's degree in computers. I am an information technology student and learner. Programming and web design have always grabbed my attention.</p>
-                <p> I am a young, active boy. I am a teenager. I enjoy a variety of activities, like traveling, experiencing nature, playing games, and coming up with new ideas. I adore spending time with my friends. My CV is available for viewing if you want to learn more about myself.</p>     
-                <a href="cv.pdf" target="_blank" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
+                Hi! My name is Bipin Acharya. 
+
+                <p><span>Hi! My name is Bipin Acharya. </span>I'm based in Pokhara, where I live with my family. Back in 2021, I was pursuing my dream of becoming a web developer, even though many people aim for professions like medicine or law. Now, I’ve completed my Bachelor of Science (Hons.) in Computing from Informatics College, Pokhara, and am working as a Senior Flutter Developer at Able Innovation, where I’ve been developing apps for over a year.</p>
+                <p> Throughout my journey, I've always been passionate about modern technology, especially programming, web design, and app development. Besides work, I have a deep love for traveling, experiencing nature, watching movies, and anime. These hobbies inspire my creativity and give me fresh perspectives on the projects I work on.</p>     
+                <p> Feel free to check out my CV for more information about my professional background, and don’t hesitate to connect with me!</p>     
+                <a href="bipin.pdf" target="_blank" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
                 <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
             </div>
         </div>
