--- a/index.html
+++ b/index.html
@@ -215,10 +215,19 @@
                     <div class="timeline-item">
                         <div class="timeline-item-inner outer-shadow" >
                             <i class="fas fa-briefcase icon" style="color: var(--skin-color);"></i>
-                            <span>present-future</span>
-                            <h3>full stack developer</h3>
-                            <h4>searching</h4>
-                            <p>Until now, I've had no prior experience. I've never worked before. I'm still a student learning about information and technology.</p>
+                            <span>November 2022 - March 2023</span>
+                            <h3>Junior App developer</h3>
+                            <h4>SKYBASE INNOVATION PVT.LTD</h4>
+                            <p>Worked as a Junior Developer, primarily focusing on Flutter for app development. My role involved creating and maintaining applications, integrating APIs throughout various stages of the projects, and collaborating with teams to deliver seamless user experiences.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item"></div>
+                        <div class="timeline-item-inner outer-shadow" >
+                            <i class="fas fa-briefcase icon" style="color: var(--skin-color);"></i>
+                            <span>May 2023 - Present</span>
+                            <h3>Senior App Developer</h3>
+                            <h4>ABLE INNOVATION PVT.LTD</h4>
+                            <p>Worked as a Senior Developer specializing in Flutter. My responsibilities included app development, managing projects, teaching Flutter to trainees, deploying applications, creating and integrating APIs, and overseeing the testing process to ensure quality and functionality.</p>
                         </div>
                     </div>
                     <!--timeline item  end-->
