change in service

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <div class="icon inner-shadow">
                             <i class="fas fa-laptop-code"></i>
                         </div>
-                        <h3>clean code</h3>
+                        <h3>App Development</h3>
                         <p></p>
                     </div>
                 </div>
