--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <span>November 2022 - March 2023</span>
                             <h3>Junior App developer</h3>
                             <h4>SKYBASE INNOVATION PVT.LTD</h4>
-                            <p>Worked as a Junior Developer, primarily focusing on Flutter for app development. My role involved creating and maintaining applications, integrating APIs throughout various stages of the projects, and collaborating with teams to deliver seamless user experiences.</p>
+                            <p>My role involved creating and maintaining applications, integrating APIs throughout various stages of the projects, and collaborating with teams to deliver seamless user experiences.</p>
                         </div>
                     </div>
                     <div class="timeline-item"></div>
@@ -227,7 +227,7 @@
                             <span>May 2023 - Present</span>
                             <h3>Senior App Developer</h3>
                             <h4>ABLE INNOVATION PVT.LTD</h4>
-                            <p>Worked as a Senior Developer specializing in Flutter. My responsibilities included app development, managing projects, teaching Flutter to trainees, deploying applications, creating and integrating APIs, and overseeing the testing process to ensure quality and functionality.</p>
+                            <p>My responsibilities included app development, managing projects, teaching Flutter to trainees, deploying applications, creating and integrating APIs, and overseeing the testing process to ensure quality and functionality.</p>
                         </div>
                     </div>
                     <!--timeline item  end-->
