--- a/index.html
+++ b/index.html
@@ -221,7 +221,11 @@
                             <p>My role involved creating and maintaining applications, integrating APIs throughout various stages of the projects, and collaborating with teams to deliver seamless user experiences.</p>
                         </div>
                     </div>
-                    <div class="timeline-item"></div>
+                    
+                    <!--timeline item  end-->
+                    </div>
+                </div>
+                <!-- <div class="timeline-item"></div>
                         <div class="timeline-item-inner outer-shadow" >
                             <i class="fas fa-briefcase icon" style="color: var(--skin-color);"></i>
                             <span>May 2023 - Present</span>
@@ -229,10 +233,7 @@
                             <h4>ABLE INNOVATION PVT.LTD</h4>
                             <p>My responsibilities included app development, managing projects, teaching Flutter to trainees, deploying applications, creating and integrating APIs, and overseeing the testing process to ensure quality and functionality.</p>
                         </div>
-                    </div>
-                    <!--timeline item  end-->
-                    </div>
-                </div>
+                    </div> -->
             </div>
         </div>
     </div>
