updated about me

--- a/index.html
+++ b/index.html
@@ -187,29 +187,13 @@
           </div>
           <div class="about-info">
             <p>
-              <span>Hi! My name is Bipin Acharya. </span>a Senior Flutter
-              Developer at Able Innovation with over a year of experience in app
-              development. My academic foundation lies in a Bachelor of Science
-              (Hons) in Computing, which I completed at Informatics College,
-              Pokhara, an affiliate of London Metropolitan University, UK, in
-              2023. Since then, I've honed my skills in programming, app
-              development, and web design, transforming ideas into innovative
-              digital solutions. My role at Able Innovation allows me to create,
-              test, and deploy apps, ensuring each project meets high standards
-              of functionality and user experience.
+              <span>I'm Bipin Acharya, </span>a Senior Flutter Developer at Able Innovation with a solid background in app development. I hold a Bachelor of Science (Hons) in Computing from London Metropolitan University (through Informatics College, Pokhara) and am currently pursuing a Master's in Information and Communication Technology at UniSC in Adelaide, South Australia.
             </p>
             <p>
-              Beyond my professional career, I’m deeply passionate about
-              traveling, coding, and experiencing the beauty of nature.
-              Exploring different cultures fascinates me and serves as a source
-              of inspiration for my projects. In my free time, I indulge in
-              watching movies and anime, which fuel my creativity and offer
-              fresh perspectives on the technology I work with. These hobbies
-              not only broaden my horizons but also bring balance to my life,
-              helping me maintain a creative edge in my career.
+              My work centers on building, testing, and deploying innovative digital solutions that combine seamless functionality with an excellent user experience. Alongside my professional journey, I’m passionate about traveling, coding, and exploring new cultures—interests that inspire fresh perspectives in my projects. When I’m not immersed in tech, you’ll find me enjoying movies, anime, or quality time with family and friends.
             </p>
             <p>
-              Feel free to check out my CV for more information about my
+              Let’s connect to explore ideas or collaborate! Feel free to check out my CV for more information about my
               professional background, and don’t hesitate to connect with me!
             </p>
             <a
