--- a/index.html
+++ b/index.html
@@ -386,6 +386,21 @@
                     </div>
                   </div>
                   <!--timeline item end-->
+                  <!--timeline item  start-->
+                  <div class="timeline-item">
+                    <div class="timeline-item-inner outer-shadow">
+                      <i
+                        class="fas fa-graduation-cap icon"
+                        style="color: var(--skin-color)"
+                      ></i>
+                      <span>2023 - Present</span>
+                      <h3>Master</h3>
+                      <p>
+                        I am currently pursuing a Master’s degree in Information and Communication Technology at the University of the Sunshine Coast, located in Adelaide, Australia.
+                      </p>
+                    </div>
+                  </div>
+                  <!--timeline item end-->
                 </div>
               </div>
             </div>
