--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               professional background, and don’t hesitate to connect with me!
             </p>
             <a
-              href="bipin.pdf"
+              href="bipincv.pdf"
               target="_blank"
               class="btn-1 outer-shadow hover-in-shadow"
               >Download CV</a
