--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
             >
           </div>
         </div>
+        
+        <!--about tabs start-->
+
+        <!--about tabs start-->
+
+        <!--about tabs start-->
+
         <!--about tabs start-->
         <div class="row">
           <div class="about-tabs">
