--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
           <div class="home-img">
             <div class="img-box inner-shadow">
-              <img src="img/try.PNG" class="outer-shadow" alt="profile-pic" />
+              <img src="img/photo.jpg" class="outer-shadow" alt="profile-pic" />
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@
               professional background, and don’t hesitate to connect with me!
             </p>
             <a
-              href="bipincv.pdf"
+              href="Bipin_Acharya_Resume.pdf"
               target="_blank"
               class="btn-1 outer-shadow hover-in-shadow"
               >Download CV</a
