--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
             <div class="contact-item-inner outer-shadow">
               <i class="fas fa-map-marked-alt"></i>
               <span>Address</span>
-              <p>133 Anzac Hwy, Kurralta Park, SA 5037, Australia</p>
+              <p>Fourth Ave, Ascot Park, SA 5043, Australia</p>
             </div>
           </div>
           <!--contact item end-->
