--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="row">
           <div class="about-img">
             <div class="img-box inner-shadow">
-              <img src="img/try.PNG" class="outer-shadow" alt="profile-pic" />
+              <img src="img/photo1.JPEG" class="outer-shadow" alt="profile-pic" />
             </div>
             <!--social link-->
             <div class="social-links">
