--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
           <div class="home-img">
             <div class="img-box inner-shadow">
-              <img src="img/photo.jpg" class="outer-shadow" alt="profile-pic" />
+              <img src="img/photo.png" class="outer-shadow" alt="profile-pic" />
             </div>
           </div>
         </div>
